--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -12,6 +12,7 @@
     <div class="page-header">
         <a href="{% url 'blog:post_new'  %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
         <h1><a href="/">Django Girls Blog</a></h1>
+        <a href="{% url 'blog:post_draft_list' %}" class="top-menu"><span class="glyphicon glyphicon-edit"></span></a>
     </div>
     <div class="content">
         <div class="row">
